Refactored FileUtils, created LogEvent, changed LogProcessor